@@ -1,3 +1,6 @@
+#
+# Note: This file must be loaded before other virtual host config files,
+#
 # HTTP
 server {
     # Listen on ipv4
@@ -8,7 +11,6 @@ server {
     #listen [::]:PH_HTTPD_PORT;
     server_name _;
 
-    root PH_HTTPD_DOCUMENTROOT;
     index index.php index.html;
 
     location / {
